Opt-in to upcoming pip-tools backtracking resolver

--- a/tox.ini
+++ b/tox.ini
@@ -16,10 +16,10 @@ passenv =
 [testenv:deps-update]
 description = Update dependencies in lockfiles
 commands =
-  pip-compile --output-file requirements/base.txt --upgrade requirements/base.in
-  pip-compile --output-file requirements/dev.txt --upgrade requirements/dev.in
-  pip-compile --output-file requirements/lint.txt --upgrade requirements/lint.in
-  pip-compile --output-file requirements/test.txt --upgrade requirements/test.in
+  pip-compile --output-file requirements/base.txt --upgrade requirements/base.in --resolver backtracking
+  pip-compile --output-file requirements/dev.txt --upgrade requirements/dev.in --resolver backtracking
+  pip-compile --output-file requirements/lint.txt --upgrade requirements/lint.in --resolver backtracking
+  pip-compile --output-file requirements/test.txt --upgrade requirements/test.in --resolver backtracking
 deps = pip-tools
 
 [testenv:lint]
