Replace isort with ruff

--- a/tox.ini
+++ b/tox.ini
@@ -26,7 +26,7 @@ deps = pip-tools
 description = Run available linters
 commands =
   black --check src/raffle tests
-  isort --check-only --diff src/raffle tests
+  ruff check src/raffle tests
 deps = --requirement requirements/lint.txt
 
 [testenv:venv]
@@ -35,9 +35,6 @@ commands =
 deps = --requirement requirements/dev.txt
 envdir = .venv
 usedevelop = true
-
-[isort]
-profile = black
 
 [pytest]
 testpaths = tests
