Update to latest FastAPI and Pydantic

--- a/tox.ini
+++ b/tox.ini
@@ -16,10 +16,10 @@ passenv =
 [testenv:deps-update]
 description = Update dependencies in lockfiles
 commands =
-  pip-compile --output-file requirements/base.txt --upgrade requirements/base.in --resolver backtracking
-  pip-compile --output-file requirements/dev.txt --upgrade requirements/dev.in --resolver backtracking
-  pip-compile --output-file requirements/lint.txt --upgrade requirements/lint.in --resolver backtracking
-  pip-compile --output-file requirements/test.txt --upgrade requirements/test.in --resolver backtracking
+  pip-compile --output-file requirements/base.txt --upgrade requirements/base.in --strip-extras
+  pip-compile --output-file requirements/dev.txt --upgrade requirements/dev.in --strip-extras
+  pip-compile --output-file requirements/lint.txt --upgrade requirements/lint.in --strip-extras
+  pip-compile --output-file requirements/test.txt --upgrade requirements/test.in --strip-extras
 deps = pip-tools
 
 [testenv:lint]
