Add pytest-pikachu as a dependency

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ envlist = py311
 [testenv]
 description = Run tests with coverage
 basepython = python3.11
-commands = pytest --cov=raffle
+commands = pytest --cov=raffle --pikachu
 deps = --requirement requirements/test.txt
 passenv =
   PGDATABASE
